refactor: refatorando todos os use case de manipulação de listas e permissões para seguir padrão de mensagem de erro